Revision history for CSV-Autoclass

{{$NEXT}}
    - Fixed a broken bin file 'use-class' with no @*ARGS
    - Ensure class def has "is rw = ''" for all attributes
        for proper operation
    - Prevent overwriting an existing output file; added
        a force option to enable overwrite
    - Added lower-case option for header fields
    - Renamed example CSV file for clarity
    - Allow one of three separator characters (,;|). Define the
        one to be used in one of these ways:
        + CLI
        + in the user's configuration file
            $HOME/.CSV-Autoclass/config.yml
                csv-autoclass-sepchar: comma
        + use environment variable CSV_AUTOCLASS_SEPCHAR to define it
                CSV_AUTOCLASS_SEPCHAR=comma
    - Added a Resources module for payload introspection
      (started with 'HowToUseModuleResources' and improved it)
    - Much more robust architecture
    - Added a new sub module
    - Moved all bin subs to lib modules
    - Added better tests
    - Added "use lib '.';" to the bin files so a local class module
        file can be found
0.2.0  2023-11-18T19:27:17-06:00
    - Renamed CSV-Autoclass (old name CSV-AutoClass)
    - Define API 2:
        + Ability for the user to choose the class name
        + Handle empty last field in header line
        + Add capability for preprocessing to remove
          comments
    - Remove auto-option based on data file name
    - Add tests
    - Remove internal lib line for ./bin programs
    - Use latest version of CSV::Parser with work-arounds as necessary
    - Use separate test badges for Linux, MacOS, and Windows

0.1.0  2022-10-27T17:58:04-05:00
    - Fix typos in README
    - Add missing test dependency
    - Fixed incorrect sorting for the numerical header keys
    - Added a test for the sorting algorithm

0.0.1  2022-08-28T06:06:08-05:00
    - Initial version